# Ebbinghaus

./: .gitignore  AGENTS.md  CITATION.cff  README.md  SPECIFICATION.md  TECHNICAL_REFERENCE.md  VARIABLE_REGISTRY.md
.positai/: settings.json
R/: analyze.R  classify_tier.R  draw_trial.R  evaluate.R  generate_design.R  generate_trial.R  render_stimuli.R  strip_answer.R  verify_trial.R
R/App/: README.md  app.R  manifest.json
R/App/src/: classify_tier.R  defaults.R  draw_shape.R  draw_trial.R  generate_design.R  generate_trial.R  render_stimuli.R  verify_trial.R
config/: defaults.R
data/: evals.csv  prompts.csv  py-hg-evals.csv  test_evals.csv  trials.csv
py/: README.md  TECHNICAL_REFERENCE.md  VARIABLE_REGISTRY.md  kaggle-gemma-3-4b.ipynb  kaggle-gemma4b-vs-qwen2vl.ipynb  pyproject.toml  two-models-nb.ipynb
py/config/: defaults.py
py/src/: __init__.py  analyze.py  classify_tier.py  draw_shape.py  draw_trial.py  evaluate.py  generate_design.py  generate_trial.py  render_stimuli.py  strip_answer.py  verify_trial.py
