[project]
name = "ebbinghaus-benchmark"
version = "1.0.0"
description = "Modular Ebbinghaus Benchmark for LLMs and Human Participants"
requires-python = ">=3.11"
license = "CC-BY-4.0"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "Pillow",
    "inspect-ai",
]

[dependency-groups]
dev = []
